pkg/templates/deployment_template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      runtimeClassName: wasmtime-spin-v1
      containers:
        - name: test
          image: chrismatteson/test:0.1.5
          command: ["/"]
